--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                         <i class="uil uil-chart-pie skills__icon"></i>
                         <div>
                             <h1 class="skills__title">Marketing</h1>
-                            <span class="skills__subtitle">More than 3 years</span>
+                            <span class="skills__subtitle">More than 1 years</span>
                         </div>
                         <i class="uil uil-angle-down skills__arrow"></i>
                     </div>
@@ -304,7 +304,7 @@
                         <i class="uil uil-swatchbook skills__icon"></i>
                         <div>
                             <h1 class="skills__title">Design</h1>
-                            <span class="skills__subtitle">More than 2 year</span>
+                            <span class="skills__subtitle">More than 3 year</span>
                         </div>
                         <i class="uil uil-angle-down skills__arrow"></i>
                     </div>
@@ -601,7 +601,7 @@
                             terimakasih sudah membantu kami untuk mendapatkan occupancy 85%</p>
                     </div>
                     <!--==================== TESTIMONIAL 2 ====================-->
-                    <div class="testimonial__content swiper-slide">
+                    <!-- <div class="testimonial__content swiper-slide">
                         <div class="testimonial__data">
                             <div class="testimonial__header">
                                 <img src="/assets/img/testimonial4.jpg" alt="" class="testimonial__img">
@@ -616,9 +616,9 @@
                             It's always a pleasure to work with Mrinmoy, he brings 100% to each project and gets work
                             done when
                             it's needed the most.</p>
-                    </div>
+                    </div> -->
                     <!--==================== TESTIMONIAL 3 ====================-->
-                    <div class="testimonial__content swiper-slide">
+                    <!-- <div class="testimonial__content swiper-slide">
                         <div class="testimonial__data">
                             <div class="testimonial__header">
                                 <img src="/assets/img/testimonial3.jpg" alt="" class="testimonial__img">
@@ -631,9 +631,9 @@
                         </div>
                         <p class="testimonial__description">
                             He's a good programmer, I carry out my project with all the possible quality. </p>
-                    </div>
+                    </div> -->
                     <!--==================== TESTIMONIAL 4 ====================-->
-                    <div class="testimonial__content swiper-slide">
+                    <!-- <div class="testimonial__content swiper-slide">
                         <div class="testimonial__data">
                             <div class="testimonial__header">
                                 <img src="/assets/img/testimonial2.jpg" alt="" class="testimonial__img">
@@ -648,7 +648,7 @@
                             He's an amazing web developer, he has a deep understanding about his sphere, and delivers
                             great result.</p>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- Add Pagination -->
                 <div class="swiper-pagination swiper-pagination-testimonial"></div>
