--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <title>Gilang Arta</title>
 
     <!--==================== Favicon ====================-->
-    <link rel="shortcut icon" href="/assets/img/favicon_edited.png" type="image/png">
+    <!-- <link rel="shortcut icon" href="/assets/img/favicon_edited.png" type="image/png"> -->
 
     <!--==================== Animate on scroll CDN ====================-->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
