--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a download="" href="assets/pdf/cv.pdf" class="button button--flex">
+                        <a download="" href="assets/pdf/CV_Gilang-Arta.pdf" class="button button--flex">
                             Download CV <i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
