--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <a href="https://github.com/gilangarta06" target="_blank" class="home__social-icon">
                             <i class="uil uil-github-alt"></i>
                         </a>
-                        <a href="https://www.linkedin.com/me?trk=p_mwlite_feed-secondary_nav" target="_blank" class="home__social-icon">
+                        <a href="https://www.linkedin.com/in/gilang-arta-344a66241?trk=contact-info" target="_blank" class="home__social-icon">
                             <i class="uil uil-linkedin-alt"></i>
                         </a>
                     </div>
@@ -757,7 +757,7 @@
                         <i class="uil uil-github-alt"></i></a>
                     </a>
 
-                    <a href="https://www.linkedin.com/me?trk=p_mwlite_feed-secondary_nav" target="_blank" class="footer__social">
+                    <a href="https://www.linkedin.com/in/gilang-arta-344a66241?trk=contact-info" target="_blank" class="footer__social">
                     <i class="uil uil-linkedin-alt"></i></a>
                     </a>
                 </div>
